parslers-benchmark/src/tests/invalid/syntaxErr/while/whileNodo.wacc
# while missing opening do

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  while false
    skip
  done
end
